tests/negative/parser/paramlist2.orng
fn a (x : Int, y: fn () -> Int {}, z: Int) -> Int {}